# streamlit-infinite-pages

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml
demo/: pyproject.toml
demo/sip_demo/: app.py  cfg.py  run.py
demo/sip_demo/page/: broken.py  home.py  test.py
doc/reference/: streamlit run parameters.md
docs/: quickstart.md
sip/: __init__.py  __meta__.py  backend.py  base.py  builder.py  config.py  configuration.py  constant.py  core.py  default.py  defaults.py  env.py  runner.py  schema.py  streamlit.py  util.py  utility.py
sip/.assets/: default_theme.css
sip/.static/: default.old.css
sip/config/: app.py  core.py  streamlit.py
sip/core/: builder.py
sip/patch/: traceback.py
sip/utils/: commands.py  defaults.py  patches.py  st_config.py
