[tool.poetry]
name = "streamlit-infinite-pages-demo"
version = "0.1.0"
description = "Demo app."
authors = ["Hart Traveller <ruling_fiction.0b@icloud.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "sip_demo" }]
include = ["sip_demo/.assets/**/*"]

[tool.poetry.dependencies]
python = "^3.10"
rich-click = "^1.7.3"
streamlit = "^1.31.1"
pydantic = "^2.6.2"
loguru = "^0.7.2"
rich = "^13.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
